chore(const_generator): add exported file path constants

--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -77,7 +77,7 @@ advanced_options=false
 dedicated_server=false
 custom_features=""
 export_filter="exclude"
-export_files=PackedStringArray("res://addons/godot-git-plugin/git_plugin.gdextension")
+export_files=PackedStringArray()
 include_filter=""
 exclude_filter=""
 export_path="exports/android-export.apk"
@@ -298,7 +298,7 @@ advanced_options=true
 dedicated_server=false
 custom_features=""
 export_filter="exclude"
-export_files=PackedStringArray("res://addons/godot-git-plugin/git_plugin.gdextension")
+export_files=PackedStringArray()
 include_filter=""
 exclude_filter=""
 export_path="exports/web-export/web-export.html"
@@ -314,7 +314,7 @@ script_export_mode=0
 
 custom_template/debug=""
 custom_template/release=""
-variant/extensions_support=true
+variant/extensions_support=false
 variant/thread_support=true
 vram_texture_compression/for_desktop=true
 vram_texture_compression/for_mobile=true
