feat: update web export config and refactor background scenes

--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -298,7 +298,7 @@ advanced_options=true
 dedicated_server=false
 custom_features=""
 export_filter="exclude"
-export_files=PackedStringArray()
+export_files=PackedStringArray("res://webrtc.gdextension")
 include_filter=""
 exclude_filter=""
 export_path="exports/web-export/web-export.html"
