feat: add networking dependencies and clean up web patch logging
- Add aiohttp and websockets to Python dependencies for async networking support
- Remove excessive debug logging from GDSyncWebPatch for cleaner output
- Simplify web patch initialization by removing verbose print statements
- Rebuild web export with updated content (pck size: 92453152 bytes)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,10 @@ version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
-dependencies = []
+dependencies = [
+    "aiohttp>=3.13.2",
+    "websockets>=15.0.1",
+]
 
 [dependency-groups]
 dev = ["gdtoolkit>=4.5.0"]
