feat: implement full signaling server with lobby system
- Add comprehensive Python signaling server implementation
- Introduce WebSocket-based lobby system for peer management
  - Support for lobby create/join/leave operations
  - Real-time peer event broadcasting
  - Lobby discovery and player limit enforcement
- Refactor server architecture with centralized State management
  - Add Lobby, Peer, and Room classes for better organization
  - Separate WebRTC signaling (/ws/{code}) from lobby events (/lobby)
- Maintain backward compatibility with existing WebRTC signaling
- Add Python-specific entries to .gitignore (pycache, build artifacts)

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,23 @@ addons/**git**
 # Ignore link to submodule
 addons/GD-Sync
 
+
+# Python generated files
+__pycache__/
+*.pyc
+*.pyo
+*.pyd
+*.pdb
+*.egg
+*.egg-info/
+dist/
+build/
+.eggs/
+*.manifest
+*.spec
+pip-wheel-metadata/
+# Installer logs
+pip-log.txt
+pip-delete-this-directory.txt
+
+
