refactor: switch to GD-Sync fork and reorganize multiplayer code
- Update GD-Sync submodule to use forked version with local multiplayer packet types fixes
- Point submodule to Siponek/GD-Sync-fork on fix/local-multiplayer-packets-types branch
- Reorganize multiplayer scripts into GDSyncWebPatch subdirectory
- Rename const identifiers (GD_SYNC_WEB_PATCH -> GDSYNC_WEB_PATCH) for consistency
- Update justfile recipes: rename update-gd-sync-windows to create-gd-sync-windows
- Add change-gd-sync-fork recipe to automate fork switching
- Add --remote flag to submodule update command

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,4 @@
 [submodule "git-submodules/GD-Sync"]
 	path = git-submodules/GD-Sync
-	url = https://github.com/GD-Sync/GD-Sync.git
+	url = https://github.com/Siponek/GD-Sync-fork.git
+	branch = fix/local-multiplayer-packets-types
