Patching gd sync (#9)
* Added plan

* feat(multiplayer): add web patches and update lobby management

Add GDSyncWebPatch and LocalServerWebPatch constants to support
multiplayer functionality on web builds. Implement clear_lobby_data()
method for proper lobby state management. Update web export build
with increased package size to include new multiplayer features.

Changes:
- Add GD_SYNC_WEB_PATCH and LOCAL_SERVER_WEB_PATCH script constants
- Implement lobby cleanup and initialization methods
- Regenerate web export assets with updated UIDs
- Update web-export.pck size from 92.4MB to 92.5MB

* feat: add networking dependencies and clean up web patch logging

- Add aiohttp and websockets to Python dependencies for async networking support
- Remove excessive debug logging from GDSyncWebPatch for cleaner output
- Simplify web patch initialization by removing verbose print statements
- Rebuild web export with updated content (pck size: 92453152 bytes)

* fix(multiplayer): register host as client in web lobby creation

Add host to client tables and emit client_joined signal when creating
a web lobby. Previously, the host was not registered in peer_client_table
and lobby_client_table because _on_peer_connected doesn't trigger for
the host itself. This caused the host to not appear in the player list.

Changes:
- Create Client instance for host with valid peer_id and client_id
- Add host to peer_client_table and lobby_client_table
- Emit GDSync.client_joined signal for host to update UI player list

* fix(multiplayer): resolve web lobby lifecycle and host join issues

- Remove redundant host join call after lobby creation to prevent double-join bug
- Separate reset_multiplayer() from close_lobby() to preserve room discovery during internal state transitions
- Add _update_room_metadata() to send lobby info to signaling server after PackRTC room creation
- Implement _close_room_on_server() to properly clean up rooms when host leaves
- Enable extensions support in web export 

--- a/.gitignore
+++ b/.gitignore
@@ -6,4 +6,25 @@
 addons/**git**
 # Ignore link to submodule
 addons/GD-Sync
+**.uid
+
+
+# Python generated files
+__pycache__/
+*.pyc
+*.pyo
+*.pyd
+*.pdb
+*.egg
+*.egg-info/
+dist/
+build/
+.eggs/
+*.manifest
+*.spec
+pip-wheel-metadata/
+# Installer logs
+pip-log.txt
+pip-delete-this-directory.txt
+
 
