Updated thesis, readme, barrier for main thread
format

Update title page and add dedication section in main.tex

Fixed comments: and key contributions in main.tex for clarity and
precision

Add new diagrams for HTTP/SSE architecture, message flow, OpenMP game
mode, and physical-to-digital mapping; remove outdated TikZ diagrams

Refactor thesis compilation scripts to use PlantUML for diagram
generation; add watch functionality for automatic recompilation

Add new images and import configurations for main menu and single player
scenes

docs(thesis): refactor appendix B to repository reference

Replace extensive code listings in Appendix B with a concise
repository reference section. This reduces the appendix from 446 to
116 lines by removing embedded code examples and instead directing
readers to the open-source repository.

Also clean up bibliography formatting:
- Standardize comment separators for consistency
- Fix author name formatting (add periods after initials)
- Correct Prensky citation type from inproceedings to book
- Update journal titles for accuracy

This improves thesis maintainability by avoiding code duplication
between the repository and the document, while making the appendix
more concise and professional.

docs(thesis): add screenshots and adjust figure sizing

- Add five new figures across architecture, implementation, and problems
chapters
  - Main menu interface screenshot (04-architecture.tex)
  - Single-player game interface and buffer zone examples
(04-architecture.tex)
  - VarTree debug panel preview (05-implementation.tex)
  - GDSync protected mode toggle (06-problems.tex)
- Reduce HTTP-SSE sequence diagram width from 0.95 to 0.75 textwidth for
better readability (03-methodology.tex)
- Expand VarTree plugin description with runtime variable inspection
details (05-implementation.tex)
- Clean up whitespace in justfile

These visual additions enhance the thesis documentation by providing
concrete examples of the game interface, debugging tools

--- a/.github/workflows/deploy-gh-pages.yml
+++ b/.github/workflows/deploy-gh-pages.yml
@@ -1,25 +1,160 @@
 name: Deploy to GitHub Pages
 
 on:
-  workflow_dispatch:  # Manual trigger only
+  workflow_dispatch:
+    inputs:
+      reason:
+        description: "Optional note for this deployment (e.g. 'release v1.2', 'test deploy')"
+        required: false
+        default: ""
+      allow_non_main:
+        description: "Allow deploying from non-main branches"
+        type: boolean
+        required: false
+        default: true
 
 permissions:
   contents: read
   pages: write
   id-token: write
 
+concurrency:
+  group: "pages"
+  cancel-in-progress: true
+
 jobs:
   deploy:
     runs-on: ubuntu-latest
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+
     steps:
+      - name: Print deployment info
+        run: |
+          echo "============================================"
+          echo "  GitHub Pages Deployment (GitHub Actions)"
+          echo "============================================"
+          echo "Repository : $GITHUB_REPOSITORY"
+          echo "Branch     : $GITHUB_REF_NAME"
+          echo "Commit     : $GITHUB_SHA"
+          echo "Actor      : $GITHUB_ACTOR"
+          echo "Reason     : '${{ inputs.reason }}'"
+          echo "============================================"
+          echo ""
+
+      - name: Branch policy check (optional)
+        run: |
+          if [ "${{ inputs.allow_non_main }}" != "true" ] && [ "$GITHUB_REF_NAME" != "main" ]; then
+            echo "::error::This workflow is configured to deploy only from 'main'."
+            echo ""
+            echo "HOW TO PROCEED"
+            echo "--------------------------------------------"
+            echo "1) Switch to the 'main' branch"
+            echo "2) Merge your changes into 'main'"
+            echo "3) Re-run this workflow"
+            echo ""
+            echo "OR: re-run this workflow and set 'allow_non_main' to true."
+            exit 1
+          fi
+
       - name: Checkout repository
         uses: actions/checkout@v4
+        with:
+          submodules: false
+          fetch-depth: 1
 
-      - name: Rename web-export.html to index.html
+      - name: Validate repository is configured for GitHub Actions Pages
         run: |
-          cp -r exports/web-export build
-          cd build
-          mv web-export.html index.html
+          echo "Checking if Pages is likely configured for GitHub Actions..."
+          echo ""
+          echo "NOTE:"
+          echo "- In your repo settings: Settings → Pages → Source should be 'GitHub Actions'."
+          echo "- If deployments fail with environment/branch restrictions:"
+          echo "  Settings → Environments → github-pages → Deployment branches"
+          echo ""
+
+      - name: Validate web export exists (with helpful guidance)
+        shell: bash
+        run: |
+          set -euo pipefail
+
+          echo "============================================"
+          echo "  Validating web export"
+          echo "============================================"
+
+          if [ ! -d "exports/web-export" ]; then
+            echo "::error::Directory 'exports/web-export' not found."
+            echo ""
+            echo "HOW TO FIX"
+            echo "--------------------------------------------"
+            echo "1) Open the Godot project locally"
+            echo "2) Go to Project → Export..."
+            echo "3) Select/create the 'Web' export preset"
+            echo "4) Export into: exports/web-export/"
+            echo "5) Commit and push the exported files"
+            echo ""
+            echo "Expected structure:"
+            echo "  exports/web-export/"
+            echo "    web-export.html   (or adjust this workflow if named differently)"
+            echo "    *.wasm / *.pck / *.js / etc."
+            echo "============================================"
+            exit 1
+          fi
+
+          if [ ! -f "exports/web-export/web-export.html" ]; then
+            echo "::error::File 'exports/web-export/web-export.html' not found."
+            echo ""
+            echo "HOW TO FIX"
+            echo "--------------------------------------------"
+            echo "A) Re-export from Godot into exports/web-export/"
+            echo "B) Ensure the main HTML is named: web-export.html"
+            echo ""
+            echo "If your export uses a different name:"
+            echo " - Either rename it to web-export.html"
+            echo " - Or edit this workflow to match your filename"
+            echo ""
+            echo "Files currently in exports/web-export:"
+            ls -la exports/web-export || true
+            echo "============================================"
+            exit 1
+          fi
+
+          echo "✓ Web export validated successfully"
+          echo "============================================"
+
+      - name: Prepare build directory
+        shell: bash
+        run: |
+          set -euo pipefail
+
+          echo "============================================"
+          echo "  Preparing build directory"
+          echo "============================================"
+
+          rm -rf build
+          cp -R exports/web-export build
+
+          # GitHub Pages expects an index.html at the root of the artifact
+          if [ -f "build/web-export.html" ]; then
+            mv build/web-export.html build/index.html
+            echo "✓ Renamed web-export.html -> index.html"
+          else
+            echo "::error::Expected build/web-export.html after copy, but it was not found."
+            echo "This usually means the export directory contents changed unexpectedly."
+            echo ""
+            echo "Debug listing:"
+            ls -la build || true
+            exit 1
+          fi
+
+          echo ""
+          echo "Build output:"
+          ls -la build
+          echo "============================================"
+
+      - name: Configure Pages
+        uses: actions/configure-pages@v5
 
       - name: Upload Pages artifact
         uses: actions/upload-pages-artifact@v3
@@ -29,3 +164,15 @@ jobs:
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
+
+      - name: Post-deploy message
+        run: |
+          echo "============================================"
+          echo "  Deployment complete"
+          echo "============================================"
+          echo "Pages URL: ${{ steps.deployment.outputs.page_url }}"
+          echo ""
+          echo "If you got permission/environment errors:"
+          echo " - Settings → Environments → github-pages"
+          echo " - Check required reviewers / deployment branches restrictions"
+          echo "============================================"
